--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "git:build": "git subtree split --branch build --prefix=out"
   },
   "dependencies": {
     "next": "14.2.1",
