--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "git:clean": "git branch -D build",
     "git:build": "git subtree split --branch build --prefix=out",
     "git:push": "git push -u origin build",
-    "git:deploy": "npm run git:clean && npm run git:build && npm run git:push"
+    "git:deploy": "npm run build && npm run git:clean && npm run git:build && npm run git:push"
   },
   "dependencies": {
     "next": "14.2.1",
