--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "git:clean": "git branch -D build",
     "git:build": "git subtree split --branch build --prefix=out",
     "git:push": "git push -u origin build",
@@ -23,9 +24,15 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/reveal.js": "^5.0.3",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.2",
     "postcss": "^8",
+    "prettier": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
