--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "git:deploy": "npm run build && npm run git:clean && npm run git:build && npm run git:push"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
